--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "news-frontend",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,6 +10,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "bootstrap": "^5.3.8",
     "next": "16.0.5",
     "react": "19.2.0",
     "react-dom": "19.2.0"
